tests/paczka1/fuzzy1/81831770.err
Error in line 1: pdwn S901 87,5
Error in line 6: pdwn A989 34,6
Error in line 5: 3aY S901 13,9
Error in line 9: A989 S27 32,5
Error in line 2: Q2z6h S27 4,3
Error in line 11: Q2z6h S105 85,7
Error in line 12: Q2z6h S901 51,8
Error in line 8: 3aY S27 11,3
Error in line 18: gCJogYSr S27 25,9
Error in line 25: gCJogYSr S901 69,6
Error in line 26: gCJogYSr A989 79,1
Error in line 27: gCJogYSr S105 88,1
Error in line 16: 3aY S901 77,8
Error in line 24: A989 A989 80,4
Error in line 31: A989 S27 20,2
Error in line 29: 3aY S27 43,2
